fixed spacing in media query to collapse space between menu item in small mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,11 @@ input, textarea {
   li {
     border-right: none;
   }
+
+/* collapses space between menu options when they stack vertically*/
+  .nav-link{
+    padding: 1px;
+  }
 }
 
 .product {
